# python-mastery-cli

./: .gitignore  BUGLOG.md  README.md  log.txt  people.csv  pyproject.toml
.github/workflows/: ci.yml
src/python_mastery_cli/: __init__.py  ai_tutor.py  app.py  config.py  exercises.py  keys.py  main.py  models.py  progress.py  quiz.py  runner.py  theme.py  utils.py  webui.py
src/python_mastery_cli/curriculum/: __init__.py  advanced.py  beginner.py  data_science.py  intermediate.py  michigan_basics.py  projects.py
src/python_mastery_cli/data/: progress.json
tests/: conftest.py  test_ai_tutor.py  test_app_flow.py  test_app_interactive.py  test_branches.py  test_cli.py  test_curriculum.py  test_edges.py  test_keys.py  test_plain.py  test_progress.py  test_quiz.py  test_runners.py  test_utils.py  test_webui.py
