[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-mastery-cli"
version = "0.1.0"
description = "An interactive terminal-based course that teaches Python from absolute beginner to advanced practical developer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Connor O'Dea" }]
keywords = ["python", "learning", "cli", "education", "tutorial", "course"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.6",
]
# The core app needs none of these. They are the libraries the advanced
# data-science lessons import, so installing an extra lets the "Run & check"
# drills for those lessons actually execute (the runner uses sys.executable, so
# the libs must live in the same environment as the CLI).
datascience = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "seaborn>=0.13",
    "scipy>=1.11",
]
web = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "sqlalchemy>=2.0",
]
# Everything the curriculum's drills/examples import — `pip install ".[all]"`
# makes every "Run & check" runnable end to end.
all = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "seaborn>=0.13",
    "scipy>=1.11",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "sqlalchemy>=2.0",
]

[project.urls]
Homepage = "https://github.com/connorodea/python-mastery-cli"
Repository = "https://github.com/connorodea/python-mastery-cli"

[project.scripts]
python-mastery = "python_mastery_cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
python_mastery_cli = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.coverage.run]
branch = true
source = ["python_mastery_cli"]

[tool.coverage.report]
show_missing = true
# Both line AND branch coverage must stay at 100%.
fail_under = 100
